--- a/client/src/App.css
+++ b/client/src/App.css
@@ -334,7 +334,9 @@ button {
 .landing 
 { position: relative;
   /*background: url('../img/showcase.jpg') no-repeat center center/cover;*/
-  background: url('./img/turned-on-black.jpg') no-repeat center center/cover;}
+  background: url('./img/turned-on-black.jpg') no-repeat center center/cover;
+  height: 100vh;
+}
 
 
 .landing-inner {
